# swipe_bot

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
config/: settings.py
deploy/: .dockerignore  Dockerfile  docker-compose.yml
src/: enums.py
src/api_client/: base_api.py  photo_utils.py
src/bot/adverts/: adverts_state.py
src/bot/adverts/handlers/: __init__.py  add_image_handler.py  appointment.py  area_handler.py  back_a.py  balcony_handler.py  cancel_a.py  commission_handler.py  communications_handlers.py  description_handler.py  edit_advert_field.py  finish_create_advert.py  finish_image.py  heating_handler.py  kitchen_area_handler.py  layout_handler.py  location_handler.py  payment_handler.py  price_handler.py  rooms_handler.py  show_summary.py  skip_photo.py  start_create_adverts.py  start_handler.py  state_handler.py
src/bot/adverts/keyboard/: confirm_advert.py  confirm_advert_inline_kb.py  control_panel.py  enum_kb.py  image_kb.py  yes_or_no_keyboards.py
src/bot/authorization/: states.py
src/bot/authorization/handlers/: __init__.py  auth_choice.py  auth_email.py  auth_login.py  auth_password.py  language.py  navigation.py  start.py
src/bot/authorization/keyboards/: auth_choise_keyboard.py  choise_language.py  control_keyboards.py
src/bot/main_menu/handlers/: __init__.py  my_menu.py  profile.py  profile_menu.py
src/bot/main_menu/keyboards/: keyboard_menu.py  profile_keyboard.py
src/bot/registration/: finish_registration.py
src/bot/registration/handlers/: __init__.py  auth_register.py  back.py  base.py  (+9 more)
(+16 files in other folders)
