[project]
name = "swipe-bot"
version = "0.0.1"
description = "Bot"
package-mode = false
authors = [
    {name = "Dmitriy",email = "ViatkinDima@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
